package com.forestech;

public class AppConfig {
    // Constantes de la aplicación
    public static final String PROJECT_NAME = "Gestion e inventario de combustibles FORESTECH";
    public static final String DATABASE = "DBforestech";
    public static final int CURRENT_YEAR = 2025;
    public static final double VERSION = 1.0;
    public static final boolean ACTIVE = true;

}
