package com.forestech;

/**
 * Clase Movement - Representa un movimiento de combustible (ENTRADA o SALIDA)
 * Esta es tu primera clase del proyecto Forestech
 */
public class Movement {
    // Por ahora solo la estructura básica
    // Después agregaremos atributos y métodos

    public Movement() {
        System.out.println("¡Se creó un movimiento!");
    }
}

