package com.forestech.helpers;

public class DataDisplay {

    /**
     * Muestra los tipos de combustible disponibles.
     */
    public static void showFuelTypes() {
        System.out.println("\n=== TIPOS DE COMBUSTIBLE ===");
        System.out.println("1. Diesel");
        System.out.println("2. Gasolina 93");
        System.out.println("3. ACPM");
        System.out.println("4. Aceite");
        System.out.println("============================\n");
    }
}
